--- a/CQS_Application/project.fragment.lock.json
+++ b/CQS_Application/project.fragment.lock.json
@@ -36,6 +36,30 @@
           "copyToOutput": true
         }
       }
+    },
+    "Service/1.0.0": {
+      "type": "project",
+      "framework": ".NETFramework,Version=v4.5.2",
+      "compile": {
+        "bin/Debug/Service.dll": {}
+      },
+      "runtime": {
+        "../CQS_Application/packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
+        "../CQS_Application/packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
+        "../CQS_Application/packages/Microsoft.Extensions.DependencyInjection.Abstractions.1.1.0/lib/netstandard1.0/Microsoft.Extensions.DependencyInjection.Abstractions.dll": {},
+        "../CQS_Application/packages/Microsoft.Extensions.Logging.1.1.1/lib/netstandard1.1/Microsoft.Extensions.Logging.dll": {},
+        "../CQS_Application/packages/Microsoft.Extensions.Logging.Abstractions.1.1.1/lib/netstandard1.1/Microsoft.Extensions.Logging.Abstractions.dll": {},
+        "../CQS_Application/packages/Newtonsoft.Json.10.0.2/lib/net45/Newtonsoft.Json.dll": {},
+        "../CQS_Application/packages/System.Runtime.InteropServices.RuntimeInformation.4.3.0/lib/net45/System.Runtime.InteropServices.RuntimeInformation.dll": {},
+        "bin/Debug/Service.dll": {}
+      },
+      "contentFiles": {
+        "bin/Debug/Service.pdb": {
+          "buildAction": "None",
+          "codeLanguage": "any",
+          "copyToOutput": true
+        }
+      }
     }
   }
 }
