--- a/CQS_Application/project.json
+++ b/CQS_Application/project.json
@@ -13,11 +13,11 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
-    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.1",
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-    "EntityFramework": "6.1.3"
+    "EntityFramework": "6.1.3",
   },
 
   "tools": {
@@ -34,11 +34,13 @@
         },
         "Persistence": {
           "target": "project"
+        },
+        "Service": {
+          "target": "project"
         }
       }
     } 
   },
-
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true,
@@ -46,13 +48,11 @@
       "exclude": ["node_modules"]
     }
   },
-
   "runtimeOptions": {
     "configProperties": {
       "System.GC.Server": true
     }
   },
-
   "publishOptions": {
     "include": [
       "appsettings.json",
@@ -64,7 +64,6 @@
       "wwwroot/dist/*.map"
     ]
   },
-
   "scripts": {
     "prepublish": [
       "npm install",
