--- a/CQS_Application/project.json
+++ b/CQS_Application/project.json
@@ -18,6 +18,7 @@
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "EntityFramework": "6.1.3",
+    "Newtonsoft.Json": "10.0.2",
   },
 
   "tools": {
@@ -30,6 +31,9 @@
     "net461": {
       "dependencies": {
         "Domain": {
+          "target": "project"
+        },
+        "Events": {
           "target": "project"
         },
         "Persistence": {
