--- a/CQS_Application/project.json
+++ b/CQS_Application/project.json
@@ -19,6 +19,7 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "EntityFramework": "6.1.3",
     "Newtonsoft.Json": "10.0.2",
+    "Microsoft.Extensions.DependencyInjection": "1.1.1",
   },
 
   "tools": {
